--- a/index.html
+++ b/index.html
@@ -80,6 +80,63 @@
         </div>
     </div>
 
+    <hr>
+
+    <div class="program-course">
+        <div class="title">
+            <h2>Computer Engineering</h2>
+            <p>Opportunities</p>
+        </div>
+
+        <div class="program-contents-container">
+            <div class="program-items">
+                <img src="images/emb.jpg" alt="">
+                <div class="caption">
+                    <p>Embedded Systems & Hardware Development</p>
+                </div>
+            </div>
+
+            <div class="program-items">
+                <img src="images/software-dev.jpg" alt="">
+                <div class="caption">
+                    <p>Software Development</p>
+                </div>
+            </div>
+
+            <div class="program-items">
+                <img src="images/softdev.jpg" alt="">
+                <div class="caption">
+                    <p>Cybersecurity & Network Engineering</p>
+                </div>
+            </div>
+
+            <div class="program-items">
+                <img src="images/data.jpg" alt="">
+                <div class="caption">
+                    <p>Data Science & AI</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="container">
+        <div class="column">
+            <h3>Register to our courses</h3>
+            <p>iSchool provides industry-leading courses designed to equip you with the skills needed to excel in today's competitive tech landscape. Whether you're a beginner or an advanced learner, our expert-led courses ensure you stay ahead. Join us and transform your future today!</p>
+        </div>
+        <div class="column">
+            <form class="form">
+                <input type="text" placeholder="Full Name" required>
+                <input type="email" placeholder="Email" required>
+                <button type="submit">Register Now</button>
+            </form>
+        </div>
+    </div>
+
+    
+
 
     
 </body>
